<resources>
    <string name="app_name">Recipes</string>
    <string name="alert">Alert</string>
    <string name="ok">ok</string>
    <string name="no_internet_message">Check Internet Connection</string>
    <string name="cook_with_what_you_have_and_when_to_reduce_your_waste">Cook with what you have and when to reduce your waste</string>
    <string name="join_swate">Join Swate</string>
    <string name="log_in">Log in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter youe email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_agree_to_swate_terms_of_service">I agree to Swate Terms of Service</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="cookie_use">Cookie use</string>
    <string name="keep_me_updated">Keep me updated about Swate news and promotions.</string>
    <string name="continue_txt">Continue</string>
    <string name="enter_your_n_account_details">Enter your \n account details.</string>
    <string name="discover">Discover</string>
    <string name="enterEmail">Please enter your email address.</string>
    <string name="email_pattern">[a-zA-Z0-9._-]+@[a-z]+\.+[a-z]{2,4}</string>
    <string name="enterValidemail">Please enter valid email address.</string>
    <string name="enterPassword">Please enter your password.</string>
    <string name="noInternet_msg">You\'re not connected to the internet. Please connect and retry.</string>
    <string name="enterFirstname">Please enter your first name.</string>
    <string name="enterLastname">Please enter your last name.</string>
    <string name="checkTnc">Please accept our Terms of Service.</string>
    <string name="no_receipe_found">No Recipe Found</string>
    <string name="min">\u0020min</string>
    <string name="servings">Servings</string>
    <string name="i_cooked_this">I cooked this!</string>
    <string name="missingIngredient">\u0020missing ingredients</string>
    <string name="singlemissingIngredient">\u0020missing ingredient</string>
    <string name="no_missingIngredinet">No missing ingredients</string>
</resources>