<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:weightSum="3"
    tools:context=".views.activities.WelcomeActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_logo"/>

        <com.softradix.recipes.fontClasses.TextViewPoppinsMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginBottom="80dp"
            android:gravity="center_horizontal"
            android:text="@string/cook_with_what_you_have_and_when_to_reduce_your_waste"
            android:textColor="#fff"
            android:textSize="@dimen/_18sdp" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/bottom_lay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1.2"
        android:orientation="vertical">

        <com.softradix.recipes.fontClasses.ButtonPoppinsMedium
            android:id="@+id/join_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_45sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/bg_white_stroke"
            android:text="@string/join_swate"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:textColor="@color/darkblue"
            android:textSize="@dimen/_13sdp" />

        <com.softradix.recipes.fontClasses.ButtonPoppinsMedium
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_45sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/bg_white_stroke"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/_13sdp" />


    </LinearLayout>
</LinearLayout>