<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".views.fragments.FragmentLogin">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_14sdp"
                    android:src="@drawable/ic_arrow_back" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="vertical">

                <com.softradix.recipes.fontClasses.TextViewPoppinsMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/_13sdp"
                    android:text="@string/welcome_back"
                    android:textColor="@color/darkblue"
                    android:textSize="@dimen/_17sdp" />


                <com.softradix.recipes.fontClasses.EditTextPoppinsMedium
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_white_solid"
                    android:backgroundTint="#40081C4F"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/enter_your_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RtlSymmetry" />

                <com.softradix.recipes.fontClasses.EditTextPoppinsMedium
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_white_solid"
                    android:backgroundTint="#40081C4F"
                    android:drawableStart="@drawable/ic_key"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="******"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RtlSymmetry" />


                <com.softradix.recipes.fontClasses.TextViewPoppinsMedium
                    android:id="@+id/tv_forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_horizontal"
                    android:paddingVertical="@dimen/_13sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll"
                android:layout_alignParentBottom="true">

                <com.softradix.recipes.fontClasses.ButtonPoppinsMedium
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/bg_white_stroke"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/darkblue"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>